# smartoj-ai-service

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
agents/generic/: __init__.py  chat_title_generator.py
agents/question_manage/nodes/: __init__.py  data_preheat.py  dispatcher.py  judge_template_for_python.py  memory_time_limit.py  planner.py
agents/solving_assistant/: agent.py  personalized_memory.py
ai_services/agents/generic/: json_parser.py
ai_services/agents/question_manage/: agent.py  config.py  state.py
ai_services/agents/question_manage/nodes/: __init__.py  data_preheat.py  dispatcher.py  judge_template.py  language.py  memory_time_limit.py  node_log.py  planner.py  question.py  solving_framework.py  tag.py  test.py
ai_services/agents/solving_assistant/: agent.py
core/: config.py  database.py  middlewares.py  model.py  node.py  request_states.py  state.py  user.py
mcp_tool_adapter/: __init__.py  sessions.py  tools.py
prompts/: manager.py
prompts/generic/: json_parser.txt
prompts/question_manage/: data_preheat.txt  dispatcher.txt  judge_template.txt  judge_template_for_python.txt  language.txt  memory_time_limit.txt  planner.txt  question.txt  solving_framework.txt  tag.txt  test.txt
prompts/question_manage/judge_template/: dispatcher.txt  python.txt
prompts/solving_assistant/: personalized_memory.txt  solving_assistant.txt
routes/: chat.py  conversation.py  memory.py
utils/: tool.py  user_profile.py
