[project]
name = "smartoj-ai-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiomysql>=0.3.2",
    "fastapi>=0.116.1",
    "langchain>=1.1.2",
    "langchain-openai>=1.1.0",
    "langgraph-checkpoint-mysql[asyncmy]>=2.0.17",
    "mcp>=1.15.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
